fixing spacing in mobile for the form.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -14096,6 +14096,15 @@ body.page-node-type-magazine-homepage .layout-panel {
     margin: 0;
     padding-bottom: 80px; } }
 
+.magazine-hub-inside--has-form .magazine-hub-inside__form {
+  margin: 0; }
+  @media (min-width: 769px) {
+    .magazine-hub-inside--has-form .magazine-hub-inside__form {
+      margin-bottom: 80px; } }
+  @media (min-width: 1050px) {
+    .magazine-hub-inside--has-form .magazine-hub-inside__form {
+      margin-bottom: 0; } }
+
 @media (min-width: 769px) {
   .magazine-hub-inside--has-form .magazine-hub-inside__header {
     margin-left: 40px; } }
@@ -14113,8 +14122,9 @@ body.page-node-type-magazine-homepage .layout-panel {
   .magazine-hub-inside--has-form .magazine-alumni__byline {
     margin: 0; } }
 
-.magazine-hub-inside--has-form .four-card-row {
-  overflow: visible; }
+@media (min-width: 1050px) {
+  .magazine-hub-inside--has-form .four-card-row {
+    overflow: visible; } }
 
 @media (min-width: 1050px) {
   .magazine-hub-inside--has-form .card-row__cta-wrapper {
@@ -14130,23 +14140,33 @@ body.page-node-type-magazine-homepage .layout-panel {
       background: white;
       margin-top: -33px; } }
 
+.magazine-hub-inside--has-form .card-row__link {
+  margin-top: .5rem;
+  margin-bottom: 0; }
+
 @media (min-width: 769px) {
   .magazine-hub-inside--has-form .magazine-hub-inside__hub,
   .magazine-hub-inside--has-form .magazine-hub-inside__inside {
     float: none;
     width: auto; } }
 
-@media (min-width: 1050px) {
-  .magazine-hub-inside--has-form .magazine-hub-inside__inside {
-    background-color: #f2f4f6;
-    margin-top: 5.39rem;
-    margin-right: 40px;
-    padding-right: 0;
-    margin-bottom: .5rem; } }
+.magazine-hub-inside--has-form .magazine-hub-inside__inside {
+  padding-top: 0; }
+  @media (min-width: 1050px) {
+    .magazine-hub-inside--has-form .magazine-hub-inside__inside {
+      background-color: #f2f4f6;
+      margin-top: 5.39rem;
+      margin-right: 40px;
+      padding-right: 0; } }
+  @media (min-width: 1280px) {
+    .magazine-hub-inside--has-form .magazine-hub-inside__inside {
+      margin-top: 3.41rem; } }
 
-@media (min-width: 1280px) {
-  .magazine-hub-inside--has-form .magazine-hub-inside__inside {
-    margin-top: 3.41rem; } }
+.magazine-hub-inside--has-form .magazine-hub-inside__hub {
+  margin-bottom: 80px; }
+  @media (min-width: 1050px) {
+    .magazine-hub-inside--has-form .magazine-hub-inside__hub {
+      margin-bottom: 0; } }
 
 @media (min-width: 1050px) {
   .magazine-hub-inside__form {
